--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -1,6 +1,5 @@
 .education_section {
     display: flex;
-    padding-top: 100px;
     justify-content: center;
     align-items: center;
     padding-left: 100px;
@@ -24,7 +23,7 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    margin-left: 90px;
+    margin-right: 90px;
 }
 .education_image{
     width: 50%;
