--- a/src/components/SkillsGraph/skills.css
+++ b/src/components/SkillsGraph/skills.css
@@ -1,18 +1,33 @@
 .skill_heading {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 60px;
+    font-size: 30px;
     margin-bottom: 100px;
-    text-align: left;
-    color: gray;
-    margin-left: 200px;
-    padding-top: 100px;
+    text-align: center;
+    color: white;
+    margin-left: 100px;
+    padding-top: 200px;
 }
 .skills_section {
-    background-color: #ededed;
-    padding-bottom: 100px;
+    background-color: #597175;
+    padding-bottom: 200px;
+    clip-path: polygon(0 4%, 100% 0, 100% 96%, 0 100%);
 }
-.graph_style {
-    width: 100%;
-    height: 900px;
-    object-fit: cover;
+.skill_style {
+    display: flex;
+    width: 360px;
+    flex-direction: column;
+}
+.skill_columns {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 100px;
+    margin-right: 100px;
+    justify-content: space-between;
+    max-width: 1140px;
+}
+.skill_title {
+    font-size: 18px;
+}
+.skill_content {
+    font-size: 12px;
 }
