--- a/src/components/EducationSection/Education.css
+++ b/src/components/EducationSection/Education.css
@@ -1,5 +1,4 @@
 .education_section {
-    display: flex;
     padding-top: 100px;
     justify-content: center;
     align-items: center;
@@ -17,30 +16,13 @@
 .education_title {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 30px;
-    text-align: left;
+    text-align: center;
     color: gray;
 }
 .education_content {
     width: 50%;
-    display: flex;
     flex-direction: column;
-    margin-left: 90px;
-}
-.education_image{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
 }
 .education_bullets {
     font-size: 15px;
-}
-.texasam_image {
-    max-width: 100%;
-    border-width: 100px;
-    border: solid;
-    border-color: white;
-    box-shadow: 2px 2px 2px 2px gray;
-    border-radius: 10px;
-    max-height: 100%;
 }
