--- a/src/components/SkillsGraph/skills.css
+++ b/src/components/SkillsGraph/skills.css
@@ -4,18 +4,18 @@
     margin-bottom: 100px;
     text-align: center;
     color: white;
-    margin-left: 100px;
     padding-top: 200px;
 }
 .skills_section {
     background-color: #597175;
-    padding-bottom: 200px;
-    clip-path: polygon(0 4%, 100% 0, 100% 96%, 0 100%);
+    padding-bottom: 100px;
+    clip-path: polygon(0 3%, 100% 0, 100% 97%, 0 100%);
 }
 .skill_style {
     display: flex;
     width: 360px;
     flex-direction: column;
+    margin-bottom: 70px;
 }
 .skill_columns {
     display: flex;
@@ -26,8 +26,20 @@
     max-width: 1140px;
 }
 .skill_title {
-    font-size: 18px;
+    font-size: 22px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    text-align: center;
+    color: white;
 }
 .skill_content {
-    font-size: 12px;
+    font-size: 16px;
+    padding-top: 0px;
+    color: white;
+}
+.skill_image {
+    width: 112px;
+    justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
 }
