--- a/src/components/EducationSection/Education.css
+++ b/src/components/EducationSection/Education.css
@@ -16,7 +16,8 @@
 .education_title {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 30px;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     color: gray;
 }
 .education_content {
