--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,8 @@
 .card_style {
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
     margin-bottom: 100px;
+    flex: 1;
 }
 .card_title {
     text-align: center;
@@ -13,4 +14,7 @@
     margin-right: 20px;
     margin-left: 20px;
     font-size: 12px;
+}
+.project_image {
+    height: 200px;
 }
