--- a/src/components/SkillsGraph/skills.css
+++ b/src/components/SkillsGraph/skills.css
@@ -3,43 +3,47 @@
     font-size: 30px;
     margin-bottom: 100px;
     text-align: center;
-    color: white;
+    color: #B1C6C9;
     padding-top: 100px;
 }
 .skills_section {
     background-color: #597175;
     padding-bottom: 100px;
     clip-path: polygon(0 3%, 100% 0, 100% 97%, 0 100%);
+    padding-left: 50px;
+    padding-right: 50px;
 }
 .skill_style {
     display: flex;
-    width: 360px;
     flex-direction: column;
     margin-bottom: 70px;
+    margin-left: 30px;
+    margin-right: 30px;
+    width: 150px;
 }
 .skill_columns {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 100px;
-    margin-right: 100px;
-    justify-content: space-between;
+    justify-content: center;
     max-width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .skill_title {
-    font-size: 22px;
+    font-size: 20px;
     margin-top: 20px;
     margin-bottom: 15px;
     text-align: center;
     color: white;
+    font-weight: 5px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .skill_content {
     font-size: 16px;
     padding-top: 0px;
     color: white;
+    text-align: center;
 }
-.skill_image {
-    width: 112px;
-    justify-content: center;
-    margin-right: auto;
-    margin-left: auto;
+.skills_icon {
+    width: 100%
 }
