--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -6,9 +6,15 @@
 }
 .card_title {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     margin-top: 20px;
     font-size: 18px;
+}
+.card_date {
+    font-size: 12px;
+    color: #F4A733;
+    margin-left: 20px;
+    font-weight: 500;
 }
 .card_content {
     margin-right: 20px;
