--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,11 @@
     font-size: 15px;
     margin-top: 20px;
 }
+.header_items a {
+    color: white;
+    text-decoration: none;
+    font-weight: normal;
+}
 .header_container {
     display: flex;
     justify-content: space-between;
