--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -4,6 +4,10 @@
     margin-bottom: 100px;
     flex: 1;
 }
+.card_style:hover {
+    transform: scale(1.05);
+    transition: transform 0.7s;
+}
 .card_title {
     text-align: center;
     margin-bottom: 0px;
