--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,9 +5,8 @@
     flex: 1;
 }
 .card_style:hover {
-    /* transform: scale(1.05);
-    transition: transform 0.5s; */
-    box-shadow: 0px 3px 3px 3px #d3d3d3;
+    transform: scale(1.05);
+    transition: transform 0.5s;
 }
 .card_title {
     text-align: center;
