--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,7 +2,9 @@
     margin-left: 15px;
     margin-right: 15px;
     margin-bottom: 100px;
-    flex: 1;
+    /* flex: 1; */
+    display: inline-block;
+    width: 300px;
 }
 .card_style:hover {
     transform: scale(1.05);
@@ -27,4 +29,9 @@
 }
 .project_image {
     height: 200px;
+}
+.project_icon {
+    bottom: -30px;
+    position: relative;
+    margin-left: 20px;
 }
