--- a/src/components/Jumbotron/Jumbotron.css
+++ b/src/components/Jumbotron/Jumbotron.css
@@ -44,6 +44,7 @@ html {
     justify-content: space-between;
     margin-left: 100px;
     margin-right: 100px;
+    flex-wrap: wrap;
 }
 .my_projects {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
