--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -2,16 +2,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
     padding-bottom: 100px;
     flex-direction: row;
     flex: 1;
     margin-top: 0px;
     margin-bottom: 0px;
-    margin-right: 0px;
-    margin-left: 0px;
-    border-bottom: gray solid 1px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1200px;
 }
 .education_title {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -81,4 +81,7 @@ li span {
 .aboutme_icon:hover {
     position: relative;
     top: -15px;
+}
+.container_2 {
+    border-bottom: gray solid 1px;
 }
