--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -6,6 +6,9 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0 0 1px 1px gray;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 50px;
 }
 .hover_text_cards {
     opacity: 0;
@@ -31,13 +34,14 @@
     align-items: center;
 }
 .contact_card {
-    margin-left: 100px;
-    margin-right: 100px;
+    /* margin-left: 100px;
+    margin-right: 100px; */
     margin-bottom: 150px;
 }
 .contact_card_container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .contact_text {
     font-size: 16px;
@@ -53,4 +57,16 @@
 .contact_image {
     width: 100px;
     display: flex;
+}
+@media only screen and (max-width: 450px) {
+    .contact_image {
+        width: 50px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .email_card, .resume_card, .git_card {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
 }
