--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -28,12 +28,13 @@
     margin-bottom: 20px;
 }
 .education_content {
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 .education_image{
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -42,13 +43,13 @@
     font-size: 14px;
 }
 .texasam_image {
-    max-width: 100%;
+    width: 100%;
     border-width: 100px;
     border: solid;
     border-color: white;
     box-shadow: 0 0 10px gray;
     border-radius: 10px;
-    max-height: 100%;
+    height: 100%;
     z-index: 1;
     top: 0;
     transition: top ease 0.5s;
@@ -66,7 +67,7 @@
     box-shadow: 0 0 5px gray;
     z-index: 2;
     border: 2px solid white;
-    margin-bottom: 80px;
+    margin-top: 30px;
     top: 0;
     transition: top ease 0.5s;
 }
@@ -84,4 +85,41 @@ li span {
 }
 .container_2 {
     border-bottom: gray solid 1px;
+}
+.about_me_images {
+    display: flex;
+    width: 100%;
+    flex: 1;
+}
+
+@media only screen and (max-width: 1100px) {
+    .aboutme_icon {
+        height: 120px;
+        width: 120px;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    .aboutme_icon {
+        display: none;
+    }
+    .education_bullets {
+        margin-right: 20px;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .education_section {
+        display: block;
+    }
+    .aboutme_line {
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .aboutme_image {
+        width: 50px;
+    }
 }
