changing grey color to dark navy blue

--- a/src/components/ExperienceSection/Experience.css
+++ b/src/components/ExperienceSection/Experience.css
@@ -43,7 +43,7 @@
     box-shadow: 6px 6px 6px #7E989D;
     padding-left: 50px;
     padding-right: 50px;
-    background-color: #597175;
+    background-color: #202A44;
     transition: transform 0.3s;
 }
 .stack_intern:hover, .stack_research:hover {
