--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -9,7 +9,7 @@
     margin-right: auto;
 }
 .container_7 {
-    background-color: #597175;
+    background-color: #202A44;
 }
 .header_item {
     font-size: 13px;
