--- a/src/components/SkillsGraph/skills.css
+++ b/src/components/SkillsGraph/skills.css
@@ -7,7 +7,7 @@
     margin-bottom: 0px;
 }
 .container_5 {
-    background-color: #597175;
+    background-color: #202A44;
     clip-path: polygon(0 3%, 100% 0, 100% 97%, 0 100%);
 }
 .skills_section {
